# projetos

./: pyproject.toml
conceito/: models.py
config/: settings.py
