
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "CarlosEduardoCardozo", email = "CarlosEduardoCardozo"},
]
dependencies = [
    "django>=4.2.5",
    "djangorestframework-simplejwt>=5.3.0",
    "djangorestframework>=3.14.0",
    "setuptools>=68.1.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
]
